# langbot

./: .gitignore  CLAUDE.md  Dockerfile  main.py  options.py  pyproject.toml  utils.py
chat/: attachment.py
kubernetes/: deploy-langbot.fish  langbot-chatgpt-4o.yaml  langbot-claude-opus.yaml  langbot-claude-sonnet.yaml  langbot-claude.yaml  langbot-gemini-pro.yaml  langbot-gemini.yaml  langbot-gpt-35.yaml  langbot-gpt-40.yaml  langbot-gpt-4o.yaml  langbot-openai-chatgpt-4o.yaml  langbot-openai-gpt-4.yaml  langbot-openai-gpt-4o.yaml  langbot-openai-gpt.yaml  langbot-openai-o1-mini.yaml  langbot-openai-o1.yaml  langbot-openai-o3-mini.yaml  langbot-openai-o3.yaml  langbot-openai-o4-mini.yaml  langbot-policy.yaml  langbot-vault.yaml  restart-langbot.sh  update-langbot.sh
langbot/: __init__.py  __main__.py  attachment.py  bot.py  chatgpt.py  errors.py  options.py  utils.py
