[project]
name = "langbot"
version = "0.2.0"
description = ""
authors = [{ name = "EcmaXp", email = "ecmaxp@ecmaxp.kr" }]
requires-python = ">=3.12"
dependencies = [
    "async-lru>=2.0.5",
    "hikari[speedups]>=2.3.5",
    "langchain>=0.3.27",
    "langchain-anthropic>=0.3.18",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.72",
    "langchain-google-genai>=2.1.8",
    "langchain-openai>=0.3.28",
    "pillow>=11.3.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "transformers>=4.54.1",
    "uvloop>=0.21.0",
    "tokencost>=0.1.25",
]

[tool.uv]
dev-dependencies = [
    "reloader-py>=0.18.0",
]

[project.scripts]
langbot = "langbot.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["langbot"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle (error)
    "F",   # pyflakes
    "B",   # bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "I",   # isort
    "UP",  # pyupgrade
    "PIE", # flake8-pie
    "PGH", # pygrep-hooks
    "PYI", # flake8-pyi
    "RUF", # Ruff-specific rules
]

ignore = [
    "E501", # line-too-long
]
