[project]
name = "langbot"
version = "0.3.0"
description = ""
authors = [{ name = "EcmaXp", email = "ecmaxp@ecmaxp.kr" }]
requires-python = ">=3.12"
dependencies = [
    "async-lru>=2.0.5",
    "hikari[speedups]>=2.3.5",
    "litellm>=1.0.0",
    "pillow>=11.3.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "transformers>=4.54.1",
    "uvloop>=0.21.0",
    "tokencost>=0.1.25",
]

[tool.uv]
dev-dependencies = [
    "reloader-py>=0.18.0",
]

[project.scripts]
langbot = "langbot.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["langbot"]

[tool.ruff]
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle (error)
    "F",   # pyflakes
    "B",   # bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "I",   # isort
    "UP",  # pyupgrade
    "PIE", # flake8-pie
    "PGH", # pygrep-hooks
    "PYI", # flake8-pyi
    "RUF", # Ruff-specific rules
]

ignore = [
    "E501", # line-too-long
]
