[project]
name = "langbot"
version = "0.4.0"
description = ""
authors = [{ name = "EcmaXp", email = "ecmaxp@ecmaxp.kr" }]
requires-python = ">=3.14"
dependencies = [
    "async-lru>=2.0.5",
    "hikari[speedups]>=2.3.5",
    "pillow>=11.3.0",
    "pydantic>=2.11.7",
    "pydantic-ai-slim[anthropic,google,openai]>=1.89,<2",
    "pydantic-settings>=2.10.1",
    "uvloop>=0.21.0",
]

[dependency-groups]
dev = [
    "reloader-py>=0.18.0",
]

[project.scripts]
langbot = "langbot.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["langbot"]

[tool.ruff]
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle (error)
    "F",   # pyflakes
    "B",   # bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "I",   # isort
    "UP",  # pyupgrade
    "PIE", # flake8-pie
    "PGH", # pygrep-hooks
    "PYI", # flake8-pyi
    "RUF", # Ruff-specific rules
]

ignore = [
    "E501", # line-too-long
]
